# The-Florida-Project

./: .gitignore  CMakeLists.txt  README.MD
src/: GameGlobals.h  Main.cpp
src/Core/: Game.cpp  Game.h
src/Core/Managers/: InputManager.cpp  InputManager.h  SettingsManager.cpp  SettingsManager.h  StyleManager.cpp  StyleManager.h
src/Core/Math/: CommonMath.cpp  CommonMath.h  VectorMethods.cpp  VectorMethods.h
src/Core/Systems/: Assert.h  Event.h  Hash.h  Logging.h  Systems.h
src/Core/Types/: LuaTableLoader.cpp  LuaTableLoader.h  Sprite.cpp  Sprite.h  String.cpp  String.h  Transform.cpp  Transform.h
src/Core/UI/: UICore.cpp  UICore.h  UICoreTypes.cpp  UICoreTypes.h  UIScreenBase.cpp  UIScreenBase.h
src/Core/UI/Types/: Box.cpp  Box.h  Button.cpp  Button.h  HorizontalStack.cpp  HorizontalStack.h  Icon.cpp  Icon.h  StackPanel.cpp  StackPanel.h  TextBlock.cpp  TextBlock.h  TextBlockRaw.cpp  TextBlockRaw.h  VerticalStack.cpp  VerticalStack.h
src/Core/Utility/: Utility.cpp  Utility.h  VectorMethods.cpp  VectorMethods.h
src/Data/: AssetManifest.lua  AssetManifest.xml  Inventory.xml  Items.lua  Items.xml  MapsManifest.lua  MapsManifest.xml  Player.lua  Player.xml  Settings.lua  Settings.xml  Styles.lua  Styles.xml
src/Data/Maps/: mp_Main.lua  mp_Main.xml  mp_Test.xml  mp_Test2.xml  mp_Test3.xml
src/Game/Enemies/: CreepEnemy.cpp  CreepEnemy.h  EnemyBase.cpp  EnemyBase.h
src/Game/Managers/: AssetManager.cpp  AssetManager.h  CraftingManager.cpp  CraftingManager.h  EnemyManager.cpp  EnemyManager.h  EventManager.cpp  EventManager.h  GameManager.cpp  GameManager.h  GameplayManager.cpp  GameplayManager.h  ItemManager.cpp  ItemManager.h  MapManager.cpp  MapManager.h  SoundManager.cpp  SoundManager.h  UIManager.cpp  UIManager.h
src/Game/Player/: Player.cpp  Player.h  PlayerAction.cpp  PlayerAction.h  PlayerInventory.cpp  PlayerInventory.h  PlayerMovement.cpp  PlayerMovement.h  PlayerStatistics.cpp  PlayerStatistics.h
src/Game/Player/Actions/: ActionBase.cpp  ActionBase.h  BulletAction.cpp  BulletAction.h  MeleeAction.cpp  MeleeAction.h
src/Game/UIScreens/: ControlsScreen.cpp  ControlsScreen.h  CraftingScreen.cpp  CraftingScreen.h  DebugScreen.cpp  DebugScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameOverlayScreen.cpp  GameOverlayScreen.h  HUDScreen.cpp  HUDScreen.h  IntroScreen.cpp  IntroScreen.h  PauseScreen.cpp  PauseScreen.h  ToastNotification.cpp  ToastNotification.h
